# Read_temperature_and_humidity_SHT31

./: CMakeLists.txt  Makefile  README.md  partitions_example.csv  sdkconfig  sdkconfig.defaults
components/sht31/: sht31.c
components/sht31/include/: sht31.h
front/: index.html
main/: CMakeLists.txt  main.c  rest_server.c
